--- a/styles/variable.css
+++ b/styles/variable.css
@@ -5,8 +5,11 @@
     --light-blue-color: #29abe2;
     --content-background-color: #f6f7f8;
     --padding-left-content-to-sidebar: 64px;
-    --width-sidebar: 260px;
+    --width-sidebar: 230px;
+    --padding-header-x: 40px;
+    --padding-header-y: 20px;
     --content-limit: calc(1440px - var(--width-sidebar));
+    --content-limit-header: calc(var(--content-limit) - var(--padding-header-x) * 2);
 }
 
 @media (max-width: 1200px) {
@@ -24,5 +27,7 @@
 @media (max-width: 900px) {
     :root {
         --width-sidebar: 100%;
+        --content-limit-header: 100%;
+        --content-limit: 100%;
     }
 }
